# serde-ubjson

./: Cargo.toml  README.md  build.sh  rustup-toolchain.toml  setup.sh
src/: err.rs  lib.rs  markers.rs  prelude.rs  ser.rs
src/inner/: de.rs  err.rs  markers.rs  reader.rs  ser.rs  writer.rs
tests/: de.rs  err.rs  model.rs  ser.rs  text.rs
