[package]
name = "serde_ubj"
version = "0.2.0"
edition = "2024"
license = "WTFPL"
authors = [
    "Paolo Angioletti <paolo.angioletti@gmail.com>"
]
description = "Universal Binary JSON data format for Rust with Serde (both `std` and `no_std` environments)."
repository = "https://github.com/pangiole/serde-ubj"
keywords = [
    "serde",
    "serialization",
    "ubj",
    "ubjson",
    "json"
]
categories = [
    "encoding"
]
exclude = [
    "book"
]

[features]
default = ["std"]
std = ["alloc", "serde/std"]
alloc = ["serde/alloc"]


[dependencies]
serde = { version = "1.0.228", default-features = false}


[dev-dependencies]
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_bytes = { version = "0.11.19", default-features = false, features = ["alloc"] }
